--- a/index.html
+++ b/index.html
@@ -332,6 +332,7 @@
               <option value="ระบบบำบัดน้ำเสียหลังวัดสว่าง">ระบบบำบัดน้ำเสียหลังวัดสว่าง</option>
               <option value="ระบบบำบัดน้ำเสียเหนือคลอง">ระบบบำบัดน้ำเสียเหนือคลอง</option>
               <option value="โรงสูบน้ำแยกสาม">โรงสูบน้ำแยกสาม</option>
+              <option value="สถานีขนถ่ายมูลฝอย">สถานีขนถ่ายมูลฝอย</option>
             </select>
           </div>
           <div class="form-group">
